--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.2",
         "bacon/bacon-qr-code": "^3.0",
+        "kwn/number-to-words": "^2.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "pragmarx/google2fa-laravel": "^2.2"
+        "pragmarx/google2fa-laravel": "^2.2",
+        "ext-intl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
