--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-intl": "*",
         "bacon/bacon-qr-code": "^3.0",
+        "codedge/laravel-fpdf": "^1.12",
         "kwn/number-to-words": "^2.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "pragmarx/google2fa-laravel": "^2.2",
-        "ext-intl": "*"
+        "pragmarx/google2fa-laravel": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
