--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "kwn/number-to-words": "^2.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "pragmarx/google2fa-laravel": "^2.2"
+        "lorisleiva/laravel-actions": "^2.8",
+        "pragmarx/google2fa-laravel": "^2.2",
+        "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-activitylog": "^4.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
