--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-gd": "*",
         "ext-intl": "*",
         "bacon/bacon-qr-code": "^3.0",
         "barryvdh/laravel-dompdf": "*",
@@ -16,6 +17,7 @@
         "laravel/tinker": "^2.9",
         "lorisleiva/laravel-actions": "^2.8",
         "mpdf/mpdf": "^6.1",
+        "phpoffice/phpspreadsheet": "^2.2",
         "pragmarx/google2fa-laravel": "^2.2",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-activitylog": "^4.8"
