--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "name": "management-system",
+    "version": "1.0.0",
+    "description": "Run command to install local chromuim for snappdf ```bash ./vendor/bin/snappdf download ```",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "puppeteer": "^23.3.0"
     }
 }
